2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-new-mail-notify.eplug.in: Added id for mail preferences.

2005-01-13  Not Zed  <NotZed@Ximian.com>

	* new-mail-notify.c: added prototypes for exported functions,
	re-arranged slightly to staticise internal functions.

	* new-mail-notify.h: removed.

2005-01-12  Miguel Angel Lopez Hernandez  <miguel@gulev.org.mx>

	* new-mail-notify.[ch]: Fix author's name, changes in code
	to maintain coding style
	(org_gnome_new_mail_notify): Now sends the dbus message using
	the send_dbus_message function
	(org_gnome_message_reading_notify): Added function, called when
	a message.reading event is fired
	(send_dbus_message): Added function, generic function to send
	dbus messages

	* org-gnome-new-mail-notify.eplug.in: define the message reading 
	event

2005-01-11  JP Rosevear  <jpr@novell.com>

	* Makefile.am: add new-mail-notify.h so it gets disted

2005-01-11  Not Zed  <NotZed@Ximian.com>

	* new-mail-notify.c (org_gnome_new_mail_config)
	(org_gnome_new_mail_notify): renamed slightly for
	namespace/consistency.
	(org_gnome_new_mail_notify): fixed signature.
	(org_gnome_new_mail_notify): fixed some warnings & formatting.

2004-12-30  Miguel Angel Lopez Hernandez  <miguel@gulev.org.mx>

	* new-mail-notify.[ch]: Plugin implementation 

	* org-gnome-new-mail-notify.eplug.in: define the
	new mail notify plugin

	* Makefile.am: build the new mail notify plugin
